--- a/VST3_SDK/base/win/base.vcxproj.filters
+++ b/VST3_SDK/base/win/base.vcxproj.filters
@@ -211,4 +211,8 @@
       <Filter>Source Files\container templates</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+    <None Include="ClassDiagram1.cd" />
+  </ItemGroup>
 </Project>
