--- a/WDL/IPlug/IPlug.vcxproj.filters
+++ b/WDL/IPlug/IPlug.vcxproj.filters
@@ -32,4 +32,7 @@
     <ClInclude Include="..\..\YCAIRO\ycairo.h" />
     <ClInclude Include="IPlugGUILiveEdit.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+  </ItemGroup>
 </Project>
