--- a/WDL/lice/lice.vcxproj
+++ b/WDL/lice/lice.vcxproj
@@ -185,6 +185,9 @@
     <ClInclude Include="..\zlib\zutil.h" />
     <ClInclude Include="lice.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
