--- a/WDL/IPlug/IPlug.vcxproj
+++ b/WDL/IPlug/IPlug.vcxproj
@@ -280,6 +280,9 @@
     <ClInclude Include="IPopupMenu.h" />
     <ClInclude Include="Log.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
