added a simple cairo rotating knob control as a proof of concept. replaced a couple of defines with const definitions. fixed a bug in ycairo.cpp (252)

--- a/WDL/IPlug/IPlug.vcxproj
+++ b/WDL/IPlug/IPlug.vcxproj
@@ -281,6 +281,7 @@
     <ClInclude Include="IPlugStructs.h" />
     <ClInclude Include="IPopupMenu.h" />
     <ClInclude Include="Log.h" />
+    <ClInclude Include="SimpleCairoControl.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
