--- a/WDL/IPlug/IPlug.vcxproj
+++ b/WDL/IPlug/IPlug.vcxproj
@@ -266,6 +266,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\YCAIRO\ycairo.h" />
+    <ClInclude Include="CairoShapes.h" />
     <ClInclude Include="Containers.h" />
     <ClInclude Include="Hosts.h" />
     <ClInclude Include="IBitmapMonoText.h" />
